--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -12,7 +12,7 @@ jobs:
       uses: ammaraskar/sphinx-action@0.4
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-pages-artifact@v3
       with:
         name: html-docs
         path: docs/build/html/
